unpackaged/main/default/objects/Case/fields/After_Enabling__c.field-meta.xml
<CustomField>
    <fullName>After_Enabling__c</fullName>
    <label>After_Enabling</label>
    <length>12</length>
    <type>Text</type>
</CustomField>