unpackaged/main/default/objects/Case/fields/Field_Manually_Created__c.field-meta.xml
<CustomField>
    <fullName>Field_Manually_Created__c</fullName>
    <label>Field Manually Created</label>
    <type>Email</type>
</CustomField>