unpackaged/main/default/objects/Case/fields/New_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Number__c</fullName>
    <label>New_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>