unpackaged/main/default/objects/Case/fields/Repo_Cleaner_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Repo_Cleaner_Custom_Field__c</fullName>
    <label>Repo-Cleaner-Custom-Field</label>
    <type>Email</type>
</CustomField>