unpackaged/main/default/objects/Case/fields/test_repo_cleaner_2__c.field-meta.xml
<CustomField>
    <fullName>test_repo_cleaner_2__c</fullName>
    <description>test-repo-cleaner-2</description>
    <label>test-repo-cleaner-2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>