unpackaged/main/default/objects/Case/fields/testPicklist__c.field-meta.xml
<CustomField>
    <fullName>testPicklist__c</fullName>
    <label>testPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>bo</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>done</fullName>
            </value>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>hi</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>s</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>z</fullName>
            </value>
            <value>
                <fullName>test-repo-cleaner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>