unpackaged/main/default/objects/Case/recordTypes/Record_Type_Repo_Cleaner.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_Repo_Cleaner</fullName>
    <active>true</active>
    <businessProcess>Support Tester</businessProcess>
    <label>Record-Type-Repo-Cleaner</label>
</RecordType>