unpackaged/main/default/objects/Case/recordTypes/Repo_Cleaner_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Repo_Cleaner_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Support Tester</businessProcess>
    <label>Repo Cleaner Record Type</label>
</RecordType>